--- a/lib/bug_hunter/views/index.haml
+++ b/lib/bug_hunter/views/index.haml
@@ -4,8 +4,7 @@
   the header
 
 -content_for :body do
-  body
+  =list_view(@errors) { |error| [error_path(error), error.message] }
 
 -content_for :footer do
   the footer
-
