display action and controller if available
Signed-off-by: David A. Cuadrado <krawek@gmail.com>

--- a/lib/bug_hunter/views/errors/_error_info.haml
+++ b/lib/bug_hunter/views/errors/_error_info.haml
@@ -19,6 +19,22 @@
     %td
       &=@error.params.inspect
 
+  -if @error.action
+    %tr
+      %td
+        %b
+          Action:
+      %td
+        &=@error.action
+
+  -if @error.controller
+    %tr
+      %td
+        %b
+          Controller:
+      %td
+        &=@error.controller
+
   %tr
     %td
       %b
