--- a/lib/bug_hunter/views/errors/_error_info.haml
+++ b/lib/bug_hunter/views/errors/_error_info.haml
@@ -8,6 +8,12 @@
   %tr
     %td
       %b
+        Times:
+    %td
+      &=@error.times
+  %tr
+    %td
+      %b
         URL:
     %td
       %a(href="#{@error.url}")
