display the created at and updated at fields
Signed-off-by: David A. Cuadrado <krawek@gmail.com>

--- a/lib/bug_hunter/views/errors/_error_info.haml
+++ b/lib/bug_hunter/views/errors/_error_info.haml
@@ -67,3 +67,15 @@
         Content:
     %td
       &=@error.line_content
+  %tr
+    %td
+      %b
+        Created At:
+    %td
+      &=@error.created_at
+  %tr
+    %td
+      %b
+        Updated At:
+    %td
+      &=@error.updated_at
