--- a/lib/bug_hunter/views/errors/show.haml
+++ b/lib/bug_hunter/views/errors/show.haml
@@ -1,8 +1,5 @@
 -title "Error: #{@error.message}"
 
--content_for :header do
-  the header
-
 -content_for :body do
   =haml :"errors/_error_info"
 
@@ -66,5 +63,7 @@
         %textarea(cols="40" rows="8" id="message" name="message")
 
       %input(type="submit" value="Submit")
+
 -content_for :footer do
-  the footer
+  %a(href="#{error_path(@error)}/resolve" data-icon="check")
+    Resolve this error
