allow to resolve errors
Signed-off-by: David A. Cuadrado <krawek@gmail.com>

--- a/lib/bug_hunter/views/errors/show.haml
+++ b/lib/bug_hunter/views/errors/show.haml
@@ -43,7 +43,7 @@
   %div(data-role="collapsible" data-collapsed=true)
     %h3
       Comments
-    -@error.comments.each do |comment|
+    -(@error.comments||[]).each do |comment|
       %div(data-role="collapsible" data-collapsed=false data-theme="b")
         %h3
           &= "#{comment["from"]}[#{comment["ip"]}] said on #{comment["created_at"]}"
