allow to assign errors
Signed-off-by: David A. Cuadrado <krawek@gmail.com>

--- a/lib/bug_hunter/views/errors/_error_info.haml
+++ b/lib/bug_hunter/views/errors/_error_info.haml
@@ -2,6 +2,14 @@
   %tr
     %td
       %b
+        Asignee:
+    %td
+      &=@error.assignee
+      %a(href="#{error_path(@error)}/assign" data-icon="gear" data-rel="dialog")
+        change...
+  %tr
+    %td
+      %b
         Message:
     %td
       &=@error.message
