--- a/lib/bug_hunter/views/index.haml
+++ b/lib/bug_hunter/views/index.haml
@@ -1,10 +1,17 @@
 -title "List of Errors"
 
 -content_for :header do
-  the header
+  %div{:"data-role" => "navbar"}
+    %ul
+      %li
+        %a(href="/?resolved=1")
+          Resolved
+      -(BugHunter::Project.instance.members||[]).each do |member|
+        %li
+          %a(href="/?assignee=#{member}")
+            &=member
+
 
 -content_for :body do
   =list_view(@errors, :filter => true) { |error| [error_path(error), h(error.message)] }
 
--content_for :footer do
-  the footer
