option to reopen the error
Signed-off-by: David A. Cuadrado <krawek@gmail.com>

--- a/lib/bug_hunter/views/errors/_error_info.haml
+++ b/lib/bug_hunter/views/errors/_error_info.haml
@@ -2,6 +2,12 @@
   %tr
     %td
       %b
+        Status:
+    %td
+      &=@error.resolved ? "Resolved" : "Open"
+  %tr
+    %td
+      %b
         Asignee:
     %td
       &=@error.assignee
