do not affect the stats when unresolving errors
Signed-off-by: David A. Cuadrado <krawek@gmail.com>

--- a/lib/bug_hunter/views/errors/show.haml
+++ b/lib/bug_hunter/views/errors/show.haml
@@ -76,5 +76,5 @@
     %a(href="#{error_path(@error)}/reopen" data-icon="check")
       Reopen this error
   -else
-    %a(href="#{error_path(@error)}/resolve" data-icon="check")
+    %a(href="#{error_path(@error)}/resolve" data-icon="check" data-theme="e")
       Resolve this error
