display number of similar errors and comments
Signed-off-by: David A. Cuadrado <krawek@gmail.com>

--- a/lib/bug_hunter/views/errors/show.haml
+++ b/lib/bug_hunter/views/errors/show.haml
@@ -43,6 +43,7 @@
     %div(data-role="collapsible" data-collapsed=true)
       %h3
         Similar Errors
+        ==(#{@error.similar_errors.count})
       %br
       =list_view(@error.similar_errors.all) { |error| [error_path(error), h(error.message)] }
       %br
@@ -50,6 +51,7 @@
   %div(data-role="collapsible" data-collapsed=true)
     %h3
       Comments
+      ==("#{@error.comments_count}")
     -(@error.comments||[]).each do |comment|
       %div(data-role="collapsible" data-collapsed=false data-theme="b")
         %h3
