allow to resolve all similar errors
Signed-off-by: David A. Cuadrado <krawek@gmail.com>

--- a/lib/bug_hunter/views/errors/show.haml
+++ b/lib/bug_hunter/views/errors/show.haml
@@ -80,3 +80,5 @@
   -else
     %a(href="#{error_path(@error)}/resolve" data-icon="check" data-theme="e")
       Resolve this error
+  %a(href="#{error_path(@error)}/resolve?include_similar=1" data-icon="check" data-theme="d")
+    Resolve all similar errors
