--- a/lib/bug_hunter/views/layout.haml
+++ b/lib/bug_hunter/views/layout.haml
@@ -6,7 +6,7 @@
     %link(rel="stylesheet" href="/stylesheets/jquery.mobile-1.0b1pre.min.css")
     %link(rel="stylesheet" href="/stylesheets/highlight.css")
 
-    %script(src="http://code.jquery.com/jquery-1.5.2.min.js")
+    %script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js")
     %script(src="/javascripts/jquery.mobile-1.0b1pre.min.js")
 
     %script(src="/javascripts/bug_hunter.js")
