--- a/lib/bug_hunter/views/errors/show.haml
+++ b/lib/bug_hunter/views/errors/show.haml
@@ -51,11 +51,11 @@
   %div(data-role="collapsible" data-collapsed=true)
     %h3
       Comments
-      ==("#{@error.comments_count}")
+      ==(#{@error.comments_count.to_i})
     -(@error.comments||[]).each do |comment|
       %div(data-role="collapsible" data-collapsed=false data-theme="b")
         %h3
-          &= "#{comment["from"]}[#{comment["ip"]}] said on #{comment["created_at"]}"
+          &= "#{comment["from"]}[#{comment["ip"]}] said on #{comment["created_at"].strftime("%b %d %Y at %I:%M%p (%Z)")}"
         &= comment["message"]
 
     %hr
