improve algorithm to highlight lines
Signed-off-by: David A. Cuadrado <krawek@gmail.com>

--- a/lib/bug_hunter/views/errors/show.haml
+++ b/lib/bug_hunter/views/errors/show.haml
@@ -7,7 +7,7 @@
     %h3
       Backtrace
     -@error.backtrace.each do |line|
-      -if line !~ /\/usr/
+      -if BugHunter::Error.highlight_line?(line)
         %span.fk_key
           &=line
       -else
