Order the error list by updated_at and show the updated_at in the list
Signed-off-by: Jorge H. Cuadrado <kuadrosxx@gmail.com>

--- a/lib/bug_hunter/views/index.haml
+++ b/lib/bug_hunter/views/index.haml
@@ -10,9 +10,8 @@
         %a(href="#{root_path}?unassigned=1")
           Unassigned
 
-
 -content_for :body do
-  =list_view(@errors, :filter => true) { |error| [error_path(error), h("[#{error.exception_type}] #{error.message}")] }
+  =list_view(@errors, :filter => true) { |error| [error_path(error), h("[#{error.exception_type}] #{error.message}"), error.updated_at] }
 
 -content_for :footer do
   %div{:"data-role" => "navbar"}
