--- a/lib/bug_hunter/views/dashboard/index.haml
+++ b/lib/bug_hunter/views/dashboard/index.haml
@@ -1,2 +1,3 @@
 -BugHunter::Dashboard.all.order(:created_at.asc).each do |dashboard|
-  &=dashboard.name
+  %a{href: "#{u("dashboard/#{dashboard.id}")}"}
+    &=dashboard.name
