--- a/lib/bug_hunter/views/dashboard/layout.haml
+++ b/lib/bug_hunter/views/dashboard/layout.haml
@@ -4,7 +4,7 @@
     %title
       ="Dashboard"
     %script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js")
-
+    %script(src="#{u('javascripts/dashboard.js')}")
     %link(rel="stylesheet" href="#{u('stylesheets/dashboard.css')}")
   %body
     =yield
