use  operator to only find the portion of data that we need to display
Signed-off-by: David A. Cuadrado <krawek@gmail.com>

--- a/lib/bug_hunter/views/dashboard/widgets/list_widget.haml
+++ b/lib/bug_hunter/views/dashboard/widgets/list_widget.haml
@@ -3,7 +3,7 @@
     =widget.title||widget.name
 
   %table
-    -widget.data[(widget.data.size - widget.rows)..-1].reverse_each do |row|
+    -widget.find_data.reverse_each do |row|
       %tr
         %td
           =row
