--- a/lib/bug_hunter/views/dashboard/widgets/table_widget.haml
+++ b/lib/bug_hunter/views/dashboard/widgets/table_widget.haml
@@ -7,7 +7,7 @@
       -widget.header.each do |header|
         %th
           =header
-    -widget.data[(widget.data.size - widget.rows)..-1].reverse_each do |row|
+    -widget.find_data.reverse_each do |row|
       %tr
         -row.each do |col|
           %td
