--- a/lib/bug_hunter/views/dashboard/show.haml
+++ b/lib/bug_hunter/views/dashboard/show.haml
@@ -1,4 +1,4 @@
 =@dashboard.name
 
--@dashboard.widgets.each do |widget|
+-@dashboard.widgets.without(:data).each do |widget|
   = haml :"dashboard/widgets/#{widget._type.split("::").last.underscore}", :locals => {:widget => widget}
