--- a/lib/bug_hunter/views/dashboard/widgets/counter_widget.haml
+++ b/lib/bug_hunter/views/dashboard/widgets/counter_widget.haml
@@ -2,6 +2,6 @@
   %h1
     =widget.title||widget.name
   %span.counter
-    =widget.value
+    =format_number(widget.value)
   %span.label
     =widget.label
