improve data point widgets
Signed-off-by: David A. Cuadrado <krawek@gmail.com>

--- a/lib/bug_hunter/views/dashboard/show.haml
+++ b/lib/bug_hunter/views/dashboard/show.haml
@@ -1,4 +1,4 @@
 =@dashboard.name
 
 -@dashboard.widgets.without(:data).each do |widget|
-  = haml :"dashboard/widgets/#{widget._type.split("::").last.underscore}", :locals => {:widget => widget}
+  = haml :"dashboard/widgets/#{widget._type.split("::").last.underscore}", :locals => {:widget => widget}, :layout => false
