--- a/lib/bug_hunter/views/dashboard/layout.haml
+++ b/lib/bug_hunter/views/dashboard/layout.haml
@@ -6,5 +6,9 @@
     %script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js")
     %script(src="#{u('javascripts/dashboard.js')}")
     %link(rel="stylesheet" href="#{u('stylesheets/dashboard.css')}")
+
+    -%w[raphael-min.js g.raphael-min.js g.bar-min.js  g.line-min.js  g.pie-min.js].each do |file|
+      %script(src="#{u("javascripts/raphael/#{file}")}")
+
   %body
     =yield
