--- a/lib/bug_hunter/views/dashboard/widgets/counter_widget.haml
+++ b/lib/bug_hunter/views/dashboard/widgets/counter_widget.haml
@@ -6,5 +6,6 @@
     .counter
       =format_number(widget.value)
   -if widget.label.present?
-    .span2.offset2.label
-      =widget.label
+    .span2.offset3
+      .label
+        =widget.label
