--- a/lib/bug_hunter/views/dashboard/layout.haml
+++ b/lib/bug_hunter/views/dashboard/layout.haml
@@ -18,7 +18,7 @@
       .navbar-inner
         .container-fluid
           %ul.nav
-            -BugHunter::Dashboard.all.order(:created_at.asc).each do |dashboard|
+            -BugHunter::Dashboard.all.order_by(:created_at.asc).each do |dashboard|
               %li
                 %a{href: "#{u("dashboard/#{dashboard.id}")}"}
                   &=dashboard.name
