--- a/lib/bug_hunter/views/main.haml
+++ b/lib/bug_hunter/views/main.haml
@@ -3,9 +3,11 @@
   %head
     %title {{title}}
     %link(rel="stylesheet" href="#{u('bootstrap/css/bootstrap.min.css')}")
-    %script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js")
-    %script(src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.4/angular.min.js")
-    %script(src="http://code.angularjs.org/1.0.4/angular-resource.min.js")
+    -#%script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js")
+    -#%script(src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.4/angular.min.js")
+    -#%script(src="http://code.angularjs.org/1.0.4/angular-resource.min.js")
+    %script(src="#{u('javascripts/angular.js')}")
+    %script(src="#{u('javascripts/angular-resource.js')}")
     %script(src="#{u('javascripts/ui-bootstrap.min.js')}")
     %script(src="#{u('javascripts/bug_hunter.js')}")
   %body
