Implements backend for group by date stats
Signed-off-by: Jorge Cuadrado <kuadrosxx@gmail.com>

--- a/lib/bug_hunter/public/template/errors_index_view.html
+++ b/lib/bug_hunter/public/template/errors_index_view.html
@@ -21,6 +21,10 @@
           <td> {{error.updated_at}} </td>
         </tr>
         <tr>
+          <th> Times: </th>
+          <td> {{error.times}} </td>
+        </tr>
+        <tr>
           <th> File: </th>
           <td>
             {{error.file}} : {{error.line}}
