--- a/lib/bug_hunter/public/template/dashboard_view.html
+++ b/lib/bug_hunter/public/template/dashboard_view.html
@@ -1,21 +1,36 @@
 <div class="row">
-<div class="span12">
-<h1> {{title}} </h1>
-<div class="span4">
-  <table class="table">
-    <thead>
-      <tr>
-        <th> Exception </th>
-        <th> # </th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr ng-repeat="exception in by_exception">
-        <td> <a href="#/errors?exception={{exception._id}}"> {{exception._id}} </th>
-        <td> {{exception.count}} </th>
-      </tr>
-    </tbody>
-  </table>
-<div>
+  <div class="span6">
+    <table class="table table-condensed">
+      <thead>
+        <tr>
+          <th> Exception </th>
+          <th> # </th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr ng-repeat="exception in by_exception">
+          <td> <a href="#/errors?exception={{exception._id}}"> {{exception._id}} </a> </th>
+          <td> {{exception.count}} </th>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+  <div class="span6">
+    <table class="table table-condensed">
+      <thead>
+        <tr>
+          <th> Day </th>
+          <th> # </th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr ng-repeat="exception in by_date">
+          <td> <a href="#/errors?day={{exception.year}}-{{exception.month}}-{{exception.day}}"> {{exception.year}}-{{exception.month}}-{{exception.day}} </th>
+          <td> {{exception.count}} </th>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+
 </div>
-</div>
+
