--- a/lib/bug_hunter/views/main.haml
+++ b/lib/bug_hunter/views/main.haml
@@ -3,7 +3,7 @@
   %head
     %title
     %link(rel="stylesheet" href="#{u('bootstrap/css/bootstrap.min.css')}")
-    -#%script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js")
+    %script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js")
     -#%script(src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.4/angular.min.js")
     -#%script(src="http://code.angularjs.org/1.0.4/angular-resource.min.js")
     %script(src="#{u('javascripts/angular.min.js')}")
