Fix assets url for angular routes
Signed-off-by: Jorge Cuadrado <kuadrosxx@gmail.com>

--- a/lib/bug_hunter/views/main.haml
+++ b/lib/bug_hunter/views/main.haml
@@ -9,6 +9,7 @@
     %script(src="#{u('javascripts/angular.min.js')}")
     %script(src="#{u('javascripts/angular-resource.min.js')}")
     %script(src="#{u('javascripts/ui-bootstrap.min.js')}")
+    %meta{ name: "template_dir", content: u('') }
   %body
     .container(ng-view)
   %script(src="#{u('javascripts/bug_hunter.js')}")
