Show more information on Error index and error show actions
Signed-off-by: Jorge Cuadrado <kuadrosxx@gmail.com>

--- a/lib/bug_hunter/public/template/errors_index_view.html
+++ b/lib/bug_hunter/public/template/errors_index_view.html
@@ -24,6 +24,12 @@
           <td> {{error.times}} </td>
         </tr>
         <tr>
+          <th> URL: </th>
+          <td>
+            {{error.url}}
+          </td>
+        </tr>
+        <tr>
           <th> File: </th>
           <td>
             {{error.file}} : {{error.line}}
